@@ -56,8 +56,7 @@ class ExportPlugin(Base):
                 self.config.save()
             overwrite = None
             if os.path.isfile(filename[0]):
-                response = gutils.question(_("File exists. Do you want to overwrite it?"), True, self.parent_window)
-                if response==-8:
+                if gutils.question(_("File exists. Do you want to overwrite it?"), self.parent_window):
                     overwrite = True
                 else:
                     overwrite = False
